--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,25 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <section>
+        <nav>
+            <img src="./assests/FES.svg" alt=""/>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#discord">Discord</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+        <header>
+            <div>
+                <h1>Best place to learn Frontend</h1>
+                <p>Go from absolute beginner to being a pro with a simplified process</p>
+                <button>Start Now</button>
+            </div>
+            <figure>
+                <img src="./assets/laptop.png" alt="Home page image"/>
+            </figure>
+        </header>
+    </section>
 </body>
 </html>
