--- a/Index.html
+++ b/Index.html
@@ -26,5 +26,50 @@
             </figure>
         </header>
     </section>
+    <main>
+        <section id="about">
+            <h2>About</h2>
+            <div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, voluptate.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, voluptate.</p>
+            </div>
+            <figure>
+                <img src="./assets/about.jpg" alt=""/>
+            </figure>
+        </section>
+
+        </section>
+        <section id="discord">
+            <h2>Discord</h2>
+            <figure>
+                <img src="./assets/discord.png" alt="Discord"/>
+            </figure>
+            <div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, voluptate.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, voluptate.</p>    
+            </div>
+        </section>
+
+        <section id="contact">
+            <h2>Contact</h2>
+            <form action="">
+                <label>Email</label>
+                <input type="text" placeholder="jane@example.com">
+                <label>Message</label>
+                <textarea type="text" placeholder="jane@example.com"></textarea>
+                <button>Submit</button>
+            </form>
+        </section>
+    </main>
+    <footer>
+        <img src="./assets/FES.svg" alt=""/>
+        <div>
+            <a href="#about">About</a>
+            <a href="#discord">Discord</a>
+            <a href="#contact">Contact</a>
+            <a href="">Courses</a>
+        </div>
+        <p>Copyright Fronted Simplified</p>
+    </footer>
 </body>
 </html>
