--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
                 <button>Start Now</button>
             </div>
             <figure>
-                <img src="./assets/laptop.png" alt="Home page image"/>
+                <img src="HTML Practice Assets/HTML Practise Assets/laptop.png" alt="Home page image"/>
             </figure>
         </header>
     </section>
@@ -34,7 +34,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, voluptate.</p>
             </div>
             <figure>
-                <img src="./assets/about.jpg" alt=""/>
+                <img src="HTML Practice Assets/HTML Practise Assets/about.jpg" alt=""/>
             </figure>
         </section>
 
@@ -42,7 +42,7 @@
         <section id="discord">
             <h2>Discord</h2>
             <figure>
-                <img src="./assets/discord.png" alt="Discord"/>
+                <img src="HTML Practice Assets/HTML Practise Assets/discord.png" alt="Discord"/>
             </figure>
             <div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, voluptate.</p>
@@ -62,7 +62,7 @@
         </section>
     </main>
     <footer>
-        <img src="./assets/FES.svg" alt=""/>
+        <img src="HTML Practice Assets/HTML Practise Assets/FES.svg" alt=""/>
         <div>
             <a href="#about">About</a>
             <a href="#discord">Discord</a>
