--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
 <body>
     <section>
         <nav>
-            <img src="./assests/FES.svg" alt=""/>
+            <img src="HTML Practice Assets/HTML Practise Assets/FES.svg" class="logo" alt=""/>
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#discord">Discord</a></li>
@@ -17,60 +17,70 @@
             </ul>
         </nav>
         <header>
+          <div class="row">
             <div>
                 <h1>Best place to learn Frontend</h1>
-                <p>Go from absolute beginner to being a pro with a simplified process</p>
+                <p class="subheader">Go from absolute beginner to being a pro with a simplified process</p>
                 <button>Start Now</button>
             </div>
             <figure>
                 <img src="HTML Practice Assets/HTML Practise Assets/laptop.png" alt="Home page image"/>
             </figure>
+          </div>
         </header>
     </section>
     <main>
         <section id="about">
-            <h2>About</h2>
-            <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, voluptate.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, voluptate.</p>
+          <h2>About</h2>
+          <div class="row">
+            <div class="section__description">
+            <div class="section__description--wrapper">
+                <p class="section__description--para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, voluptate.</p>
+                <p class=section__description--para>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, voluptate.</p>
             </div>
-            <figure>
+            <figure class="about__img--wrapper">
                 <img src="HTML Practice Assets/HTML Practise Assets/about.jpg" alt=""/>
             </figure>
+            </div>
+          </div>
         </section>
 
         </section>
         <section id="discord">
-            <h2>Discord</h2>
-            <figure>
+          <h2>Discord</h2>
+          <div class="row">
+          <div class="section__description">
+            <figure class="about__img--wrapper">
                 <img src="HTML Practice Assets/HTML Practise Assets/discord.png" alt="Discord"/>
             </figure>
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, voluptate.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, voluptate.</p>    
+                <p class="section__description--para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, voluptate.</p>
+                <p class="section__description--para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, voluptate.</p>    
             </div>
+          </div>
+         </div>
         </section>
 
         <section id="contact">
             <h2>Contact</h2>
             <form action="">
                 <label>Email</label>
-                <input type="text" placeholder="jane@example.com">
+                <input type="email" placeholder="jane@example.com">
                 <label>Message</label>
-                <textarea type="text" placeholder="jane@example.com"></textarea>
-                <button>Submit</button>
+                <textarea type="text" placeholder="Cool website, let's get connected!"></textarea>
+                <button>Contact Us!</button>
             </form>
         </section>
     </main>
     <footer>
-        <img src="HTML Practice Assets/HTML Practise Assets/FES.svg" alt=""/>
-        <div>
-            <a href="#about">About</a>
-            <a href="#discord">Discord</a>
-            <a href="#contact">Contact</a>
-            <a href="">Courses</a>
+        <img class="footer__logo" src="HTML Practice Assets/HTML Practise Assets/FES.svg" alt=""/>
+        <div class="footer__links">
+            <a class="footer__link" href="#about">About</a>
+            <a class="footer__link" href="#discord">Discord</a>
+            <a class="footer__link" href="#contact">Contact</a>
+            <a class="footer__link" href="">Courses</a>
         </div>
-        <p>Copyright Fronted Simplified</p>
+        <p>Copyright Frontend Simplified</p>
     </footer>
 </body>
 </html>
