--- a/Index.html
+++ b/Index.html
@@ -18,10 +18,10 @@
         </nav>
         <header>
           <div class="row">
-            <div>
+            <div class="home__description">
                 <h1>Best place to learn Frontend</h1>
                 <p class="subheader">Go from absolute beginner to being a pro with a simplified process</p>
-                <button>Start Now</button>
+                <button class="home__description--button">Start Now</button>
             </div>
             <figure>
                 <img src="HTML Practice Assets/HTML Practise Assets/laptop.png" alt="Home page image"/>
@@ -50,6 +50,7 @@
           <h2>Discord</h2>
           <div class="row">
           <div class="section__description">
+            <div class="section__description--wrapper">
             <figure class="about__img--wrapper">
                 <img src="HTML Practice Assets/HTML Practise Assets/discord.png" alt="Discord"/>
             </figure>
@@ -57,6 +58,7 @@
                 <p class="section__description--para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, voluptate.</p>
                 <p class="section__description--para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, voluptate.</p>    
             </div>
+           </div>
           </div>
          </div>
         </section>
